Fixing slider nav issues + horizontal scrolling, refs #111.

--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -927,8 +927,7 @@ body.home {
   ==================== */
   nav#slider-nav {
     position: relative;
-    left: 50%;
-    margin: 10px 0;
+    margin-left: 50%;
     a {
       text-indent: -9999px;
       display: block;
